--- a/css/variables.css
+++ b/css/variables.css
@@ -3,6 +3,7 @@
  --blue: #4679bd;
  --grey: #504d4d;
  --orange: #fec107;
+ --yellow:#ffff00;
  --dark: #000;
  --shadow: 0px 0px 5px #00000083;
  --shadow-btn:0px 0px 2px #dc143b; 
