--- a/css/admin.css
+++ b/css/admin.css
@@ -41,9 +41,13 @@ label small {
 }
 
 .card-cont{
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(6, auto);
+  grid-template-rows: 150px auto;
+  overflow-x: scroll;
+}
+.card-cont::-webkit-scrollbar{
+  display: none;
 }
 .card-cont .card {
   width: 250px;
@@ -73,15 +77,16 @@ label small {
   display: flex;
   width: 100%;
   padding: 12px;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .admin-info .main-info .img-cont{
   float: left;
-  width: 300px;
 }
 .admin-info .main-info .img-cont .img{
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   background-color: #000;
   background-size: cover;
@@ -89,4 +94,6 @@ label small {
 }
 .admin-info .main-info .info{
   float: right;
+  padding: 12px;
+  margin: 0px auto;
 }
