--- a/css/admin.css
+++ b/css/admin.css
@@ -35,18 +35,18 @@ label small {
   top: 30px;
 }
 
-.main-cont{
+.main-cont {
   width: 75%;
   margin: 20px auto;
 }
 
-.card-cont{
+.card-cont {
   display: grid;
   grid-template-columns: repeat(6, auto);
   grid-template-rows: 150px auto;
   overflow-x: scroll;
 }
-.card-cont::-webkit-scrollbar{
+.card-cont::-webkit-scrollbar {
   display: none;
 }
 .card-cont .card {
@@ -55,7 +55,7 @@ label small {
   padding: 15px 15px;
   box-shadow: var(--light-shadow);
   background: #2c2c36;
-  margin:10px;
+  margin: 10px;
 }
 
 .card-cont .card .icon {
@@ -64,7 +64,7 @@ label small {
   color: var(--yellow);
 }
 
-.post-tables .table{
+.post-tables .table {
   box-shadow: var(--light-shadow);
   background: #2c2c36;
   border: none !important;
@@ -73,7 +73,7 @@ label small {
   margin: 12px auto;
 }
 
-.admin-info .main-info{
+.admin-info .main-info {
   display: flex;
   width: 100%;
   padding: 12px;
@@ -81,10 +81,10 @@ label small {
   align-items: center;
 }
 
-.admin-info .main-info .img-cont{
+.admin-info .main-info .img-cont {
   float: left;
 }
-.admin-info .main-info .img-cont .img{
+.admin-info .main-info .img-cont .img {
   width: 100px;
   height: 100px;
   border-radius: 50%;
@@ -92,8 +92,45 @@ label small {
   background-size: cover;
   background-position: center;
 }
-.admin-info .main-info .info{
+.admin-info .main-info .info {
   float: right;
   padding: 12px;
   margin: 0px auto;
+}
+
+/* modal */
+.modal-cont{
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top:0px;
+  left:0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0,0,0,.9);
+  z-index: 1000;
+}
+.center {
+  margin-top: 50px;
+}
+
+.modal-header {
+  padding-bottom: 5px;
+}
+
+.modal-footer {
+  padding: 0;
+}
+
+.modal-footer .btn-group button {
+  height: 40px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border: none;
+  border-right: 1px solid #ddd;
+}
+
+.modal-footer .btn-group:last-child > button {
+  border-right: 0;
 }
