--- a/css/login.css
+++ b/css/login.css
@@ -33,3 +33,9 @@ body {
   width: 400px;
   margin: 0px auto;
 }
+
+.login-cont form .footer .btn-primary{
+  background: #ffff01;
+  color: #000;
+  border: none;
+}
