--- a/css/admin.css
+++ b/css/admin.css
@@ -128,3 +128,13 @@ label small {
 .modal-cont .modal-card .body label{
   font-weight: 100 !important;
 }
+
+ .skill-card{
+  width: 100%;
+  padding: 20px;
+  background-color: #000;
+}
+.skill-card .cont{
+  display: flex;
+  justify-content: space-between;
+}
