--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap");
 @import url(./variables.css);
 
@@ -99,4 +99,64 @@ body {
   background: #2c2c36;
   color:#ccc;
   font-weight:200;
+}
+
+video{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background-size: cover;
+}
+.port-cont{
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top:0px;
+  overflow-x: hidden;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0,0,0,.9);
+  overflow-y: scroll;
+}
+
+.port-cont .cont{
+  width: 600px;
+  height: auto;
+  padding:12px 20px;
+  background: #16161d;
+  color:#fff;
+}
+.port-cont .cont .img-cont{
+  width: 100%;
+  height: 250px;
+  border-radius: 12px;
+}
+.port-cont .cont .date-cont .date{
+  background: #2c2c36;
+  padding:5px 12px;
+  border-radius: 30px;
+}
+.port-cont .cont .body{
+  font-weight: 300 !important;
+  font-size:15px;
+}
+.port-cont .cont .reaction-cont{
+  display: flex;
+  width: 100%;
+  text-align: center;
+}
+.port-cont .cont .reaction-cont button{
+  margin: 10px auto;
+  text-align: center;
+  outline: none;
+  border: 1px solid #2c2c2c;
+  color: #ffc107;
+  background: #16161d;
+  padding:10px;
+  transition: .1s;
+  font-size: 20px;
+}
+.port-cont .cont .reaction-cont button:focus{
+  border: 2px solid #2c2c2c;
 }
